fixes greeting overflow in mobile view

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -80,3 +80,12 @@
   100% {color: #08fdd8;}
 
 }
+
+@media only screen and (max-width: 385px) {
+  .greet-card {
+    padding-left: 1%;
+  }
+  .name {
+    --size: 7vh;
+  }
+}
